--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 gunicorn==20.1.0
+Bootstrap-Flask==2.2.0
 certifi==2022.9.24
 click==8.1.3
 dominate==2.5.2
 Flask==2.2.2
+Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.6
 Flask-Gravatar==0.5.0
 Flask-Login==0.6.2
